kubernetes/_base/networking/policies/database/allow-traffic-from-backend-to-database.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-from-backend-to-database
  labels:
    app: color-api

spec:
  podSelector:
    matchLabels:
      app: color-api
      tier: database

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: color-api
              tier: backend

      ports:
        - port: 27017
          protocol: TCP
